[package]
name = "challenge"
version = "0.1.0"
authors = ["Matt Cook <hello@mattcook.dev>"] 
edition = "2021"
description = "Challenge solutions"
readme = "README.md"
repository = "https://github.com/sciencefidelity/challenge"
license = "MIT or Apache-2.0"

# [lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
b_tree = { path = "b_tree" }
linked = { path = "linked" }
rand = "0.8.5"
utils = { path = "utils" }
